[gd_scene load_steps=27 format=3 uid="uid://dyfxudskyeq8o"]

[ext_resource type="Script" uid="uid://b3mpm6qt0gvlf" path="res://scripts/main_screen.gd" id="1_5vuk0"]
[ext_resource type="Texture2D" uid="uid://dfspedwjqaut2" path="res://assets/sprites/background.jpg" id="1_ngi3g"]
[ext_resource type="Texture2D" uid="uid://la0bt6v3t731" path="res://assets/sprites/bottomDesktopBar.png" id="2_ayqbx"]
[ext_resource type="Texture2D" uid="uid://d0udavkyhxjp0" path="res://assets/sprites/starMailBig.png" id="3_b2o6d"]
[ext_resource type="LabelSettings" uid="uid://7mavfiqoggw0" path="res://assets/fonts/spacerFont.tres" id="4_723i7"]
[ext_resource type="Texture2D" uid="uid://bondd7aot77e4" path="res://assets/sprites/cyberDiveBig.png" id="4_c3u6d"]
[ext_resource type="Texture2D" uid="uid://cvbhxdxldm58x" path="res://assets/sprites/dictionaryBig.png" id="5_5vuk0"]
[ext_resource type="Texture2D" uid="uid://bo5a3w0mk5d8q" path="res://assets/sprites/starlightButton.png" id="5_b2o6d"]
[ext_resource type="Texture2D" uid="uid://bt5wavtbd508r" path="res://assets/sprites/desktopMenuBG.png" id="6_x2j6s"]
[ext_resource type="Texture2D" uid="uid://cff3lmrbv856q" path="res://assets/sprites/settingButton2.png" id="8_rscv6"]
[ext_resource type="Texture2D" uid="uid://b42nwdaxq1t3n" path="res://assets/sprites/shutDownButton.png" id="9_723i7"]
[ext_resource type="Texture2D" uid="uid://boghh26gsegtf" path="res://assets/sprites/starMailTab.png" id="11_rscv6"]
[ext_resource type="Texture2D" uid="uid://b48b176kueu1u" path="res://assets/sprites/cyberDiveTab.png" id="12_723i7"]
[ext_resource type="Texture2D" uid="uid://d0n2htaf7i2e5" path="res://assets/sprites/dictionaryTab.png" id="13_txcsy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_300ok"]
atlas = ExtResource("8_rscv6")
region = Rect2(1, 1, 120, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vuk0"]
atlas = ExtResource("8_rscv6")
region = Rect2(123, 1, 120, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2j6s"]
atlas = ExtResource("9_723i7")
region = Rect2(1, 1, 120, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_6266e"]
atlas = ExtResource("9_723i7")
region = Rect2(123, 1, 120, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_b2o6d"]
atlas = ExtResource("5_b2o6d")
region = Rect2(1, 1, 28, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3u6d"]
atlas = ExtResource("5_b2o6d")
region = Rect2(31, 1, 28, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_ijlxd"]
atlas = ExtResource("11_rscv6")
region = Rect2(1, 1, 120, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmnkg"]
atlas = ExtResource("11_rscv6")
region = Rect2(123, 1, 120, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_8j8t6"]
atlas = ExtResource("12_723i7")
region = Rect2(1, 1, 120, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_oqrjv"]
atlas = ExtResource("12_723i7")
region = Rect2(123, 1, 120, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_cgrjy"]
atlas = ExtResource("13_txcsy")
region = Rect2(1, 1, 129, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_xi686"]
atlas = ExtResource("13_txcsy")
region = Rect2(132, 1, 129, 30)

[node name="MainScreen" type="Node2D"]
script = ExtResource("1_5vuk0")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="background" type="TextureRect" parent="."]
offset_left = -960.00006
offset_top = -540.0
offset_right = 1600.0
offset_bottom = 900.0
scale = Vector2(0.7500007, 0.7500007)
texture = ExtResource("1_ngi3g")
metadata/_edit_use_anchors_ = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="apps" type="VBoxContainer" parent="CanvasLayer"]
offset_left = 30.0
offset_top = 30.0
offset_right = 88.0
offset_bottom = 222.0
scale = Vector2(1.5, 1.5)

[node name="starMail" type="TextureButton" parent="CanvasLayer/apps"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_b2o6d")

[node name="spacer1" type="Label" parent="CanvasLayer/apps"]
layout_mode = 2
text = "."
label_settings = ExtResource("4_723i7")

[node name="cyberDive" type="TextureButton" parent="CanvasLayer/apps"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("4_c3u6d")

[node name="spacer2" type="Label" parent="CanvasLayer/apps"]
layout_mode = 2
text = "."
label_settings = ExtResource("4_723i7")

[node name="dictonary" type="TextureButton" parent="CanvasLayer/apps"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("5_5vuk0")

[node name="desktopBar" type="TextureRect" parent="CanvasLayer"]
offset_top = 1025.0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_ayqbx")

[node name="desktopMenuBG" type="TextureRect" parent="CanvasLayer"]
visible = false
offset_top = 887.0
offset_right = 252.0
offset_bottom = 1025.0
texture = ExtResource("6_x2j6s")

[node name="desktopMenuButtons" type="VBoxContainer" parent="CanvasLayer"]
visible = false
offset_left = 6.0
offset_top = 891.0
offset_right = 126.0
offset_bottom = 955.0
scale = Vector2(2, 2)

[node name="settings" type="TextureButton" parent="CanvasLayer/desktopMenuButtons"]
layout_mode = 2
toggle_mode = true
texture_normal = SubResource("AtlasTexture_300ok")
texture_pressed = SubResource("AtlasTexture_5vuk0")

[node name="shutDown" type="TextureButton" parent="CanvasLayer/desktopMenuButtons"]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_x2j6s")
texture_pressed = SubResource("AtlasTexture_6266e")

[node name="appTabs" type="HBoxContainer" parent="CanvasLayer"]
offset_left = 5.0
offset_top = 1030.0
offset_right = 33.0
offset_bottom = 1060.0
scale = Vector2(1.5, 1.5)

[node name="startMenuButton" type="TextureButton" parent="CanvasLayer/appTabs"]
layout_mode = 2
toggle_mode = true
texture_normal = SubResource("AtlasTexture_b2o6d")
texture_pressed = SubResource("AtlasTexture_c3u6d")

[node name="starMailWindow" type="TextureButton" parent="CanvasLayer/appTabs"]
visible = false
layout_mode = 2
toggle_mode = true
texture_normal = SubResource("AtlasTexture_ijlxd")
texture_pressed = SubResource("AtlasTexture_gmnkg")

[node name="cyberDiveWindow" type="TextureButton" parent="CanvasLayer/appTabs"]
visible = false
layout_mode = 2
toggle_mode = true
texture_normal = SubResource("AtlasTexture_8j8t6")
texture_pressed = SubResource("AtlasTexture_oqrjv")

[node name="dictionaryWindow" type="TextureButton" parent="CanvasLayer/appTabs"]
visible = false
layout_mode = 2
toggle_mode = true
texture_normal = SubResource("AtlasTexture_cgrjy")
texture_pressed = SubResource("AtlasTexture_xi686")

[connection signal="pressed" from="CanvasLayer/apps/starMail" to="." method="_on_star_mail_pressed"]
[connection signal="pressed" from="CanvasLayer/apps/cyberDive" to="." method="_on_cyber_dive_pressed"]
[connection signal="pressed" from="CanvasLayer/apps/dictonary" to="." method="_on_dictonary_pressed"]
[connection signal="pressed" from="CanvasLayer/desktopMenuButtons/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="CanvasLayer/desktopMenuButtons/shutDown" to="." method="_on_shut_down_pressed"]
[connection signal="pressed" from="CanvasLayer/appTabs/startMenuButton" to="." method="_on_start_menu_button_pressed"]
[connection signal="pressed" from="CanvasLayer/appTabs/starMailWindow" to="." method="_on_star_mail_tab_pressed"]
[connection signal="pressed" from="CanvasLayer/appTabs/cyberDiveWindow" to="." method="_on_cyber_dive_tab_pressed"]
[connection signal="pressed" from="CanvasLayer/appTabs/dictionaryWindow" to="." method="_on_dictionary_tab_pressed"]
